_sources/api/gen/other/2.10.0/interfaces/domain__internal_AndroidMethodArgumentMap.AndroidMethodArgumentMap.md.txt
# Interface: AndroidMethodArgumentMap

[domain/_internal/AndroidMethodArgumentMap](../modules/domain__internal_AndroidMethodArgumentMap.md).AndroidMethodArgumentMap

## Properties

### answerCall

 **answerCall**: readonly [`string`]

___

### apiReady

 **apiReady**: readonly []

___

### clearItems

 **clearItems**: readonly []

___

### deleteItem

 **deleteItem**: readonly [`string`]

___

### deleteNavLayer

 **deleteNavLayer**: readonly [`string`]

___

### getItem

 **getItem**: readonly [`string`]

___

### hangUpCall

 **hangUpCall**: readonly [`string`]

___

### holdCall

 **holdCall**: readonly [`string`]

___

### makeCall

 **makeCall**: readonly [`string`]

___

### muteMicrophone

 **muteMicrophone**: readonly []

___

### putAppInForeground

 **putAppInForeground**: readonly []

___

### removeNotification

 **removeNotification**: readonly [`string`]

___

### sendNotification

 **sendNotification**: readonly [`string`]

___

### sendRawRakelAction

 **sendRawRakelAction**: readonly [`string`]

___

### setHospital

 **setHospital**: readonly [`number`]

___

### setItem

 **setItem**: readonly [`string`, `string`]

___

### setNavLayerPoint

 **setNavLayerPoint**: readonly [`string`, `string`]

___

### setNavLayerShape

 **setNavLayerShape**: readonly [`string`, `string`]

___

### setPriority

 **setPriority**: readonly [`number`]

___

### unholdCall

 **unholdCall**: readonly [`string`]

___

### unmuteMicrophone

 **unmuteMicrophone**: readonly []
